fix spacing

--- a/src/components/form-tags/_form-tags.scss
+++ b/src/components/form-tags/_form-tags.scss
@@ -2,7 +2,8 @@
   .b-form-tags-list {
     margin-top: -0.25rem;
 
-    .b-form-tag {
+    .b-form-tag,
+    .b-form-tags-input-li {
       margin-top: 0.25rem;
     }
   }
